[squash] fix text wrapping

--- a/src/assets/sass/components/my-profile.scss
+++ b/src/assets/sass/components/my-profile.scss
@@ -16,4 +16,8 @@
   &__change-link{
     float: right;
   }
+
+  dd {
+    overflow-wrap: anywhere
+  }
 }
